# njoy-ENDFtk

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ReleaseNotes.md
.github/workflows/: ContinuousIntegration.yml
cmake/: dependencies.cmake  unit_testing.cmake  unit_testing_python.cmake
examples/: ENDFtk-getting-started-example-1-tree-parsing.ipynb  ENDFtk-getting-started-example-2-manipulating-endf-files.ipynb  ENDFtk-mf2-example-1-parsing-parameters.ipynb  ENDFtk-mf3-example-1-cross-section-data.ipynb  ENDFtk-mf32-example-1-parsing-matrices.ipynb  ENDFtk-mf6-example-1-neutron-gamma-multiplicity-probability-prompt-fission.ipynb  ENDFtk-mf8-example-1-fission-yield-data.ipynb
examples/resources/: n-Rh103.endf
python/: CMakeLists.txt
python/examples/: ENDFtk-mf3-example-1-cross-section-data.ipynb  ENDFtk-mf6-example-1-neutron-gamma-multiplicity-probability-prompt-fission.ipynb  ENDFtk-mf8-example-1-fission-yield-data.ipynb
python/src/: ENDFtk.python.cpp  definitions.hpp  variants.hpp
python/src/file/: 1.python.cpp  16.python.cpp  3.python.cpp  5.python.cpp  6.python.cpp
python/src/gsection/: 16g.python.cpp  1g.python.cpp  3g.python.cpp  5g.python.cpp  6g.python.cpp
python/src/gsection/5/: 18g.python.cpp  455g.python.cpp
python/src/section/2/151/: MultiLevelBreitWigner.python.cpp  ParticlePairs.python.cpp  RMatrixLimited.python.cpp  ResonanceChannels.python.cpp  ScatteringRadius.python.cpp  SingleLevelBreitWigner.python.cpp  SpecialCase.python.cpp  SpinGroup.python.cpp  UnresolvedEnergyDependent.python.cpp  UnresolvedEnergyDependentFissionWidths.python.cpp  UnresolvedEnergyDependentFissionWidthsJValue.python.cpp  UnresolvedEnergyDependentJValue.python.cpp  UnresolvedEnergyIndependent.python.cpp
python/src/section/28/: SubshellData.python.cpp
python/src/section/32/151/: GeneralReichMoore.python.cpp  ReichMooreScatteringRadiusUncertainties.python.cpp
python/src/section/7/4/: ScatteringLawConstants.python.cpp
python/src/tree/: GFile.python.cpp  GMaterial.python.cpp  GSection.python.cpp  GTape.python.cpp  Tape.python.cpp
python/stubs/ENDFtk/: ENDFtk.pyi  MF10.pyi  MF12.pyi  MF13.pyi  MF14.pyi  MF15.pyi  MF16.pyi  MF23.pyi  MF27.pyi  MF28.pyi  MF3.pyi  MF31.pyi  MF33.pyi  MF34.pyi  MF35.pyi  MF4.pyi  MF40.pyi  MF5.pyi  MF9.pyi  sequence.pyi  tree.pyi
python/stubs/ENDFtk/MF1/: MT451.pyi  MT452.pyi  MT455.pyi  MT456.pyi  MT458.pyi  MT460.pyi  __init__.pyi
python/stubs/ENDFtk/MF2/: MT151.pyi  MT152.pyi  __init__.pyi
python/stubs/ENDFtk/MF26/: LAW1.pyi  LAW2.pyi  __init__.pyi
python/stubs/ENDFtk/MF32/: __init__.pyi
python/stubs/ENDFtk/MF32/MT151/: LCOMP1.pyi  LCOMP2.pyi  __init__.pyi
python/stubs/ENDFtk/MF5/: MT18.pyi  MT455.pyi  __init__.pyi
python/stubs/ENDFtk/MF6/: LAW1.pyi  LAW2.pyi  LAW5.pyi  LAW7.pyi  __init__.pyi
python/stubs/ENDFtk/MF7/: MT2.pyi  MT4.pyi  MT451.pyi  __init__.pyi
python/stubs/ENDFtk/MF8/: MT454.pyi  MT457.pyi  MT459.pyi  __init__.pyi
python/test/MF1/: Test_ENDFtk_MF1_MT451_GSection.py
python/test/MF16/: Test_ENDFtk_MF16_GSection.py
python/test/MF2/MT151/: Test_ENDFtk_MF2_MT151_Isotope.py  Test_ENDFtk_MF2_MT151_RMatrixLimited.py  Test_ENDFtk_MF2_MT151_ResonanceChannels.py
python/test/MF26/: Test_ENDFtk_MF26_ContinuumEnergyAngle.py  Test_ENDFtk_MF26_ReactionProduct.py
python/test/MF28/: Test_ENDFtk_MF28_SubshellData.py
python/test/MF3/: Test_ENDFtk_MF3_GSection.py
python/test/MF32/MT151/LCOMP1/: Test_ENDFtk_MF32_MT151_LCOMP1_ResonanceParameters.py
python/test/MF32/MT151/LCOMP2/: Test_ENDFtk_MF32_MT151_LCOMP2_ResonanceChannels.py
python/test/MF5/: Test_ENDFtk_MF5_GSection.py  Test_ENDFtk_MF5_MT18_GSection.py  Test_ENDFtk_MF5_MT455_GSection.py
python/test/MF6/: Test_ENDFtk_MF6_GSection.py  Test_ENDFtk_MF6_Section.py
python/test/MF6/LAW1/: Test_ENDFtk_MF6_LAW1_KalbachMann.py  Test_ENDFtk_MF6_LAW1_LegendreCoefficients.py
python/test/MF7/: Test_ENDFtk_MF7_MT4_Section.py
python/test/MF7/MT2/: Test_ENDFtk_MF7_MT2_CoherentElastic.py  Test_ENDFtk_MF7_MT2_MixedElastic.py
python/test/MF7/MT4/: Test_ENDFtk_MF7_MT4_ScatteringFunction.py  Test_ENDFtk_MF7_MT4_ScatteringLawConstants.py
python/test/MF8/: Test_ENDFtk_MF8_FissionYieldData.py
python/test/resources/: n-001_H_001.endf  n-092-U_235.gendf  n-092_U_235.gendf
python/test/tree/: Test_ENDFtk_Tree_File.py  Test_ENDFtk_Tree_GMaterial.py  Test_ENDFtk_Tree_GTape.py
src/ENDFtk/: DataRecord.hpp  GMaterial.hpp  GTape.hpp  InterpolationRecord.hpp  ListRecord.hpp  TabulationRecord.hpp  section.hpp
src/ENDFtk/file/Base/src/: ctor.hpp
src/ENDFtk/gfile/: 1.hpp  16.hpp  3.hpp  5.hpp  6.hpp
src/ENDFtk/gsection/: 16g.hpp  1g.hpp  3g.hpp  5g.hpp  6g.hpp
src/ENDFtk/gsection/1/: 451g.hpp
src/ENDFtk/gsection/16/src/: ctor.hpp  makeMatrices.hpp  makeRecords.hpp  print.hpp  readRecords.hpp  verifySize.hpp
src/ENDFtk/gsection/16/test/: 16g.test.cpp  CMakeLists.txt
src/ENDFtk/gsection/3/src/: ctor.hpp  makeRecords.hpp  makeVectors.hpp  mapRecords.hpp  print.hpp  readRecords.hpp  vectorToRecords.hpp  verifyIndex.hpp  verifySize.hpp
src/ENDFtk/gsection/3/test/: 3g.test.cpp  CMakeLists.txt
src/ENDFtk/gsection/5/: 18g.hpp  455g.hpp
src/ENDFtk/gsection/5/src/: ctor.hpp  makeRecord.hpp  makeVectors.hpp  print.hpp  readRecord.hpp
src/ENDFtk/gsection/5/test/: 5g.test.cpp  CMakeLists.txt
src/ENDFtk/record/: InterpolationBase.hpp
src/ENDFtk/section/: 34.hpp  BaseWithoutMT.hpp
src/ENDFtk/tree/: GFile.hpp  GMaterial.hpp  GSection.hpp  GTape.hpp  fromFile.hpp
test/: ControlRecord.test.cpp  DirectoryRecord.test.cpp  record.test.cpp
test/file/: 1.test.cpp  7.test.cpp  8.test.cpp
test/gsection/: 16g.test.cpp  6g.test.cpp
test/gsection/1/: 451g.test.cpp
test/gsection/5/: 18g.test.cpp  455g.test.cpp
test/record/: Tail.test.cpp  Zipper.test.cpp
test/section/28/: SubshellData.test.cpp
test/section/35/: SquareMatrix.test.cpp
test/section/7/: 4.test.cpp
test/section/7/4/: ScatteringLawConstants.test.cpp
test/section/8/: FissionYieldData.test.cpp
test/tree/: GMaterial.test.cpp  GSection.test.cpp  Material.test.cpp  Tape.test.cpp
(+63 files in other folders)
